--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,12 @@
         </activity>
         <activity android:name=".SubActivity1"
             android:label="@string/activity_sub1"
+            android:icon="@drawable/ic_view_grid_white_36dp"
             android:exported="true">
         </activity>
         <activity android:name=".SubActivity2"
             android:label="@string/activity_sub2"
+            android:icon="@drawable/ic_view_list_white_36dp"
             android:exported="true">
         </activity>
         <activity android:name=".MainActivity2"
