add PreferencesDebugActivity, demonstrating how the framework correctly parses intents in preferences xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
             android:label="@string/activity_shortcutmanager_debug"
             >
         </activity>
+        <activity android:name=".PreferencesDebugActivity"
+            android:label="@string/activity_preferences_debug"
+            >
+        </activity>
     </application>
 
 </manifest>
